2019-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/bpf.pk (BPF_Insn_Opcode._print): Simply using the `in'
	operator.
	(bpf_class_is_alujmp): Likewise.
	* pickles/btf.pk (BTF_Type): Likewise.

2019-11-08  Michael Drüing <michael@drueing.de>

	* src/std.pk (atoi): New function.
	* testsuite/poke.std/atoi-1.pk: New test.
	* testsuite/poke.std/atoi-2.pk: Likewise.
	* testsuite/poke.std/atoi-3.pk: Likewise.
	* testsuite/poke.std/atoi-4.pk: Likewise.
	* testsuite/poke.std/atoi-5.pk: Likewise.
	* testsuite/poke.std/atoi-6.pk: Likewise.
	* testsuite/poke.std/atoi-7.pk: Likewise.
	* testsuite/poke.std/atoi-8.pk: Likewise.
	* testsuite/poke.std/atoi-9.pk: Likewise.
	* testsuite/poke.std/atoi-10.pk: Likewise.
	* testsuite/poke.std/atoi-11.pk: Likewise.
	* testsuite/poke.std/atoi-12.pk: Likewise.
	* testsuite/poke.std/atoi-13.pk: Likewise.

2019-11-08  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* HACKING (Writing poke Tests): New section.

2019-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y: Handle compound statements in the parser
	destructor.

2019-11-07  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-repl.h: New file.
	* src/pk-repl.c: Likewise.
	* src/Makefile.am (poke_SOURCES): Add pk-repl.c and pk-repl.h
	* HACKING (Appendix): Add src/pk-repl.h and src/pk-repl.c to the
	list of sources.
	* src/poke.c: Include pk-repl.h
	(repl): Remove function.
	(main): Use pk_repl.

2019-11-06  Darshit Shah  <darnir@gnu.org>

    * bootstrap.conf: Exit out if jitter's bootstrap fails

2019-11-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-term.c (pk_term_hyperlink): Fix guard.
	(pk_term_end_hyperlink): Likewise.

2019-11-06  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Write After Approval): Add Darshit Shah to the list of
	commiters.

2019-11-05  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/union-diag-7.pk: New test.
	* src/pkl-tab.y (struct_type_field): Adjust location for $$ when
	the first token in the rule is empty.
