@@ -38,6 +38,7 @@ gnulib_modules="
   tempname
   tmpdir
   xalloc
+  system
   "
 
 checkout_only_file=
